<resources>
    <string name="app_name">旅游盒子</string>
    <string name="login">登陆</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册账号</string>
    <string name="login_failed">登陆失败</string>
    <string name="login_title">登陆</string>
    <string name="action_settings">个性化</string>
    <string name="action_login">登陆</string>
    <string name="action_my_schedule">日程</string>
    <string name="action_message">News</string>
    <string name="pref_share_position">位置共享</string>
    <string name="pref_share_position_summ">打开位置共享可以让您的好友看见您的实时位置</string>
    <string name="pref_server_addr">服务器地址</string>
    <string name="pref_server_addr_summ">192.168.1.200:8080</string>
    <string name="welcome_background">欢迎界面背景图片</string>
    <string name="action_sos">SOS</string>
    <string name="sos_message">求救说明</string>
    <string name="sos_message1">再次求救（该消息会在未输入5秒之后自动发送）</string>
    <string name="sos_title">SOS</string>
    <string name="sos_send">发送</string>
    <string name="sos_cancel">取消</string>
    <string name="sos_confirm">已确认获救</string>
    <string name="sos_auto_send">无输入操作，5s后自动发送求救信息</string>
    <string name="complain_send">发送</string>
    <string name="complain_send_success">发送成功，谢谢您的反馈！</string>
    <string name="complain_cancel">取消</string>
    <string name="complain_hint">请输入您的投诉原因或建议</string>
    <string name="action_feedback">投诉或建议</string>
    <string name="login_register">注册新账号</string>
    <string name="welcome_title">Travel Box</string>
    <string name="sos">sos</string>
    <string name="app_name2">TimelineText</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">设置</string>
    <string name="find">搜一搜附近</string>
    <string name="history">我的足迹</string>
    <string name="friends">我的好友</string>
    <string name="LocationManager">位置管理</string>
    <string name="app_name1">好友列表</string>
    <string-array name="profile_array">
        <item>我的好友</item>
        <item>我的足迹</item>
        <item>位置管理</item>
        <item>个性化</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_pic">更换背景</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string-array name="seven_days">
        <item>And the Spirit of God moved upon the face of the waters. And God said, Let there be light: and there was light. And God saw the light, that it was good: and God divided the light from the darkness. And God called the light Day, and the darkness he called Night. And the evening and the morning were the first day. </item>
        <item>And God said, “Let there be a rāqîa between the waters to separate water from water.” So God made the rāqîa and separated the water under the vault from the water above it, and it was so, and God called the rāqîa “heavens”, and there was evening, and there was morning—the second day.</item>
        <item>And God said, Let the waters under the heaven be gathered together unto one place, and let the dry land appear: and it was so. And God called the dry land Earth; and the gathering together of the waters called he Seas: and God saw that it was good. And God said, Let the earth bring forth grass, the herb yielding seed, and the fruit tree yielding fruit after his kind, whose seed is in itself, upon the earth: and it was so. And the earth brought forth grass, and herb yielding seed after his kind, and the tree yielding fruit, whose seed was in itself, after his kind: and God saw that it was good. And the evening and the morning were the third day. </item>
        <item>And God said, Let there be lights in the firmament of the heaven to divide the day from the night; and let them be for signs, and for seasons, and for days, and years: And let them be for lights in the firmament of the heaven to give light upon the earth: and it was so. And God made two great lights; the greater light to rule the day, and the lesser light to rule the night: he made the stars also. And God set them in the firmament of the heaven to give light upon the earth, And to rule over the day and over the night, and to divide the light from the darkness: and God saw that it was good. And the evening and the morning were the fourth day.</item>
        <item>And God said, Let the waters bring forth abundantly the moving creature that hath life, and fowl that may fly above the earth in the open firmament of heaven. And God created great whales, and every living creature that moveth, which the waters brought forth abundantly, after their kind, and every winged fowl after his kind: and God saw that it was good. And God blessed them, saying, Be fruitful, and multiply, and fill the waters in the seas, and let fowl multiply in the earth. And the evening and the morning were the fifth day.</item>
        <item>And God said, Let the earth bring forth the living creature after his kind, cattle, and creeping thing, and beast of the earth after his kind: and it was so. And God made the beast of the earth after his kind, and cattle after their kind, and every thing that creepeth upon the earth after his kind: and God saw that it was good. And God said, Let us make man in our image, after our likeness: and let them have dominion over the fish of the sea, and over the fowl of the air, and over the cattle, and over all the earth, and over every creeping thing that creepeth upon the earth. So God created man in his own image, in the image of God created he him; male and female created he them. And God blessed them, and God said unto them, Be fruitful, and multiply, and replenish the earth, and subdue it: and have dominion over the fish of the sea, and over the fowl of the air, and over every living thing that moveth upon the earth. And God said, Behold, I have given you every herb bearing seed, which is upon the face of all the earth, and every tree, in the which is the fruit of a tree yielding seed; to you it shall be for meat. And to every beast of the earth, and to every fowl of the air, and to every thing that creepeth upon the earth, wherein there is life, I have given every green herb for meat: and it was so. And God saw every thing that he had made, and, behold, it was very good. And the evening and the morning were the sixth day.</item>
        <item>Thus the heavens and the earth were finished, and all the host of them. And on the seventh day God ended his work which he had made; and he rested on the seventh day from all his work which he had made. And God blessed the seventh day, and sanctified it: because that in it he had rested from all his work which God created and made. </item>
    </string-array>
    <string name="net_error_tip">当前网络不可用，请检查你的网络设置</string>
    <string name="left_title_name">好友列表</string>
    <string name="center_title_name">最近会话</string>
    <string name="right_title_name">设置</string>
    <string name="no_chat">暂时没有新消息</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="searchdialog_find_contact_new">搜索</string>
    <string name="first_start_title">初始化设置</string>
    <string name="first_start_tips">昵称不能为空哦</string>
    <string name="first_start_scuess">连接服务器成功</string>
    <string name="first_start_dialog_text">连接服务器...</string>
    <string name="isSingle">单身</string>
    <string name="info_info">个人资料</string>
    <string name="face_jazz_effects">表情翻页效果</string>
    <string name="set_push">消息通知</string>
    <string name="sound_and_vibrate">声音</string>
    <string name="new_msg_notify">新消息提醒</string>
    <string name="setting_display">界面</string>
    <string name="logout_account">注销登录</string>
    <string name="security_and_privacy">安全和隐私</string>
    <string name="logout_exit_account">退出当前帐号</string>
    <string name="pref_assistant">辅助功能</string>
    <string name="delete_friend_confirm">确定删除%1$s吗？</string>
    <string name="menu_about">关于</string>
    <string name="set_message_notify">通知栏挂机图标</string>
    <string name="set_message_sound">新消息声音提醒</string>
    <string name="set_show_head">聊天显示自己头像</string>
    <string name="set_acount_info">个人资料</string>
    <string name="set_face_jazz">表情滑动效果</string>
    <string name="press_again_backrun">再按一次后台运行</string>
    <string name="press_again_exit">再按一次退出应用</string>
    <string name="app_is_run_background">推聊正在后台运行</string>
    <string name="user_agreement">way</string>
    <string name="official_website">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="feedback_suggest">帮助与反馈</string>
    <string name="qq_impression">手机QQ印象</string>
    <string name="version_upgrade">版本更新</string>
    <string name="feature_info">功能介绍</string>
    <string name="QQS_weibo">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="all_rights_reserved">Copyright © 2014-2015 . All Rights Reserved.</string>
    <string name="my_blog_url">http://blog.csdn.net/weidi1989</string>
    <string name="my_email">way.ping.li@gmail.com</string>
    <string name="app_information">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;！</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请选择邮件的方式将此错误报告提交给我，我会尽快修复这个问题，谢谢！</string>
    <string name="submit_report">提交报告</string>
    <string name="register_tip">提交报告</string>
    <string name="timeout_try_again">网络连接超时，请重试</string>
    <string name="app_version">V1.0.0</string>
    <string name="null_account_prompt">请输入帐号号</string>
    <string name="password_input_prompt">请输入密码</string>
    <string name="request_failed">登录失败:</string>
    <string name="status_available">在线</string>
    <string name="status_away">离开</string>
    <string name="status_chat">Q我吧</string>
    <string name="status_dnd">请勿打扰</string>
    <string name="status_xa">隐身</string>
    <string name="status_offline">离线</string>
    <string name="status_busy">忙碌</string>
    <string name="status_online">在线</string>
    <string name="hide_login">隐身登录</string>
    <string name="aio_ime_action_label">完成</string>
    <string name="silence_login">静音模式</string>
    <string name="login_prompt">登录中</string>
    <string name="login_prompt_msg">连接中...</string>
    <string name="login_prompt_no">未连接</string>
    <string name="MoveRosterEntryToGroupDialog_summ">请选择一个分组</string>
    <string name="MoveRosterEntryToGroupDialog_title">改变分组</string>
    <string name="RenameGroup_summ">重命名分组%s为:</string>
    <string name="RenameGroup_title">重命名分组</string>
    <string name="RenameEntry_summ">重命名%1$s(%2$s)为:</string>
    <string name="RenameEntry_title">重命名好友</string>
    <string name="deleteRosterItem_text">确定删除%1$s(%2$s)?</string>
    <string name="deleteRosterItem_title">删除好友</string>
    <string name="deleteChatHistory_text">确定清空与%1$s(%2$s)的聊天消息记录?</string>
    <string name="deleteChatHistory_title">删除最近会话</string>
    <string name="next">下一步</string>
    <string name="rename">备注名</string>
    <string name="move">移动到</string>
    <string name="delete">删除</string>
    <string name="add">重发申请</string>
    <string name="open">打开</string>
    <string name="more">显示更多</string>
    <string name="ok">确定</string>
    <string name="auto_save_password">记住密码</string>
    <string name="conversation_net_error_label">请先连接上再试</string>
    <string name="conversation_set_need_handle_label">待办</string>
    <string name="conversation_cancel_need_handle_label">取消待办</string>
    <string name="roster_group_rename_failed">默认分组不能重命名</string>
    <string name="add_friend">添加好友</string>
    <string name="default_group">我的好友</string>
</resources>