<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_bg" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_gradient"
        android:layout_marginTop="270dp"/>

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:text="@string/welcome_title"
        android:textColor="#ff514536"
        android:textSize="70sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="300dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:id="@+id/linearLayout">

            <EditText
                android:id="@+id/username"
                style="@style/TravelBox.Login.EditText.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/username"/>

            <EditText
                android:id="@+id/password"
                style="@style/TravelBox.Login.EditText.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:hint="@string/password"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:id="@+id/linearLayout2">

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#492b61cc"
                android:text="@string/login"
                android:layout_marginRight="10dp"
                android:textColor="#ffeff2ff"/>

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3b32cb3e"
                android:text="@string/login_register"
                android:textColor="#ffeff2ff"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/linearLayout2"
            android:layout_below="@+id/linearLayout">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32.0dip"
                android:layout_marginRight="32.0dip"
                android:layout_marginTop="5.0dip"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/auto_save_password"
                    android:layout_width="wrap_content"
                    android:layout_height="40.0dip"
                    android:button="@drawable/checkbox_bg1"
                    android:checked="true"
                    android:text="@string/auto_save_password"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.0px"
                    android:layout_weight="1.0" />

                <CheckBox
                    android:id="@+id/hide_login"
                    android:layout_width="wrap_content"
                    android:layout_height="40.0dip"
                    android:button="@drawable/checkbox_bg1"
                    android:checked="false"
                    android:text="@string/hide_login"
                    android:textColor="@color/black" />
            </LinearLayout>



            </LinearLayout>


    </RelativeLayout>

</FrameLayout>




