<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="center"
        android:src="@drawable/blur" />


    <ImageView
        android:id="@+id/avatar_wrapper"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/circle"
        android:padding="5dp"/>
    <TextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatar_wrapper"
        android:layout_centerHorizontal="true"
        android:text="Никола Тесла"
        android:layout_margin="5dp"
        android:textSize="20sp"/>
   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="match_parent"
       android:orientation="horizontal"
       android:layout_below="@+id/nickname">

   <ImageButton
       android:layout_width="fill_parent"
       android:layout_weight="1"
       android:layout_height="wrap_content"
       android:id="@+id/friends"
       android:text="@string/friends"
       android:src="@drawable/friendslist"
       android:focusableInTouchMode="false" />
    <ImageButton
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/history"
        android:text="@string/history"
        android:src="@drawable/history"
        android:layout_toRightOf="@+id/friends" />
    <ImageButton
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/LocationManager"
        android:src="@drawable/locationmanager"
        android:layout_toRightOf="@+id/history"/>
    <ImageButton
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/Settings"
        android:text="@string/action_settings"
        android:src="@drawable/settings"
        android:layout_toRightOf="@+id/LocationManager"/>
   </LinearLayout>

</RelativeLayout>



